media/bazarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bazarr
  name: bazarr
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
        release: bazarr
    spec:
      containers:
        - image: 'linuxserver/bazarr:latest'
          imagePullPolicy: IfNotPresent
          name: bazarr
          ports:
            - containerPort: 6767
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /config
              name: media-pvc
              subPath: configs/bazarr
            - mountPath: /tv
              name: media-pvc
              subPath: library/tv
            - mountPath: /movies
              name: media-pvc
              subPath: library/movies
            - mountPath: /config/config/config.ini
              name: bazarr-config
              subPath: config.ini
      volumes:
        - name: media-pvc
          persistentVolumeClaim:
            claimName: media-pvc
        - configMap:
            name: bazarr-configmap
          name: bazarr-configmap
        - name: bazarr-config
