media/jackett-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jackett
  name: jackett
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - image: 'gjeanmart/jackettvpn:latest'
          imagePullPolicy: IfNotPresent
          name: jackett
          ports:
            - containerPort: 9117
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /downloads
              name: media-pvc
              subPath: downloads/jackett
            - mountPath: /config/openvpn
              name: openvpn-config
            - mountPath: /config/Jackett
              name: jackett-config
      restartPolicy: Always
      volumes:
        - name: media-pvc
          persistentVolumeClaim:
            claimName: media-pvc
        - name: openvpn-config
        - name: openvpn-credentials
          secret:
            secretName: openvpn-credentials
        - name: jackett-config
        - name: jackett-configmap
          configMap:
            name: jackett-configmap
