media/plex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: plex
  name: plex
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: plex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
    spec:
      hostNetwork: true
      containers:
        - image: 'linuxserver/plex:latest'
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 32400
            timeoutSeconds: 1
          name: plex
          ports:
            - containerPort: 32400
              name: pms
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 32400
            timeoutSeconds: 1
          resources: {}
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 32400
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /data
              name: media-pvc
              subPath: library
            - mountPath: /config
              name: media-pvc
              subPath: configs/plex
      volumes:
        - name: media-pvc
          persistentVolumeClaim:
            claimName: media-pvc
