media/radarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr
  name: radarr
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
        release: radarr
    spec:
      containers:
        - image: 'linuxserver/radarr:latest'
          imagePullPolicy: IfNotPresent
          name: radarr
          ports:
            - containerPort: 7878
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /config
              name: media-pvc
              subPath: configs/radarr
            - mountPath: /downloads/transmission
              name: media-pvc
              subPath: downloads/transmission
            - mountPath: /movies
              name: media-pvc
              subPath: library/movies
            - mountPath: /config/config.xml
              name: radarr-config
              subPath: config.xml
      volumes:
        - name: media-pvc
          persistentVolumeClaim:
            claimName: media-pvc
        - configMap:
            name: radarr-configmap
          name: radarr-configmap
        - name: radarr-config
