media/sonarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
        release: sonarr
    spec:
      containers:
        - image: 'linuxserver/sonarr:latest'
          imagePullPolicy: IfNotPresent
          name: sonarr
          ports:
            - containerPort: 8989
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /config
              name: media-pvc
              subPath: configs/sonarr
            - mountPath: /downloads/transmission
              name: media-pvc
              subPath: downloads/transmission
            - mountPath: /tv
              name: media-pvc
              subPath: library/tv
            - mountPath: /config/config.xml
              name: sonarr-config
              subPath: config.xml
      volumes:
        - name: media-pvc
          persistentVolumeClaim:
            claimName: media-pvc
        - configMap:
            name: sonarr-configmap
          name: sonarr-configmap
        - name: sonarr-config
