media/jackett-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jackett
  name: jackett
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9117
  selector:
    app: jackett
  type: ClusterIP
