media/radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radarr
  name: radarr
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 7878
  selector:
    app: radarr
  type: ClusterIP
