media/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: "media-ingress"
spec:
  rules:
  - host: media.raspberrypi
    http:
      paths:
        - path: "/transmission"
          pathType: Prefix
          backend:
            service:
              name: "transmission-transmission-openvpn"
              port: 
                name: http
        - path: "/sonarr"
          pathType: Prefix
          backend:
            service:
              name: "sonarr"
              port: 
                name: http
        - path: "/radarr"
          pathType: Prefix
          backend:
            service:
              name: "radarr"
              port: 
                name: http
        - path: "/jackett"
          pathType: Prefix
          backend:
            service:
              name: "jackett"
              port: 
                name: http
        - path: "/bazarr"
          pathType: Prefix
          backend:
            service:
              name: "bazarr"
              port: 
                name: http
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: "plex"
              port: 
                name: pms
